# manga-ocr

./: .gitignore  README.md  create_dummy_background.py  create_dummy_image.py  pyproject.toml
fonts/: fonts.csv
manga_ocr/: __init__.py  __main__.py  _version.py  ocr.py  run.py
manga_ocr_dev/: README.md  __init__.py  env.py
manga_ocr_dev/data/: __init__.py  generate_backgrounds.py  process_cc100.py  process_manga109s.py
manga_ocr_dev/synthetic_data_generator/: README.md  __init__.py  composer.py  generator.py  renderer.py  run.bat  run_generate.py  scan_fonts.py  utils.py
manga_ocr_dev/synthetic_data_generator/common/: base_generator.py  composer.py  exceptions.py  utils.py
manga_ocr_dev/synthetic_data_generator/common/tests/: test_base_generator.py  test_composer.py  test_exceptions.py  test_utils.py
manga_ocr_dev/synthetic_data_generator/tests/: test_generator.py  test_robustness.py  test_run_generate.py
manga_ocr_dev/synthetic_data_generator_v2/: composer.py  generator.py  image_augmentations.py  run_generate.py
manga_ocr_dev/synthetic_data_generator_v2/tests/: test_composer.py  test_generator.py  test_generator_v2.py  test_run_generate.py  test_utils.py
manga_ocr_dev/tests/: test_synthetic_data_generator.py
manga_ocr_dev/training/: __init__.py  augmentations.py  config.yaml  dataset.py  get_model.py  metrics.py  train.py  utils.py
manga_ocr_dev/training/config/: __init__.py  schemas.py
tests/: __init__.py  generate_expected_results.py  test_composer.py  test_generator.py  test_generator_ext.py  test_main.py  test_ocr.py  test_renderer.py  test_run.py  test_run_generate.py  test_scan_fonts.py  test_synthetic_data_generator.py  test_utils.py
tests/data/: test_generate_backgrounds.py  test_process_cc100.py  test_process_manga109s.py
tests/training/: test_augmentations.py  test_dataset.py  test_get_model.py  test_metrics.py  test_train.py  test_training_utils.py  test_utils.py
tests/training/config/: test_schemas.py
