[project]
name = "manga-ocr"
authors = [
    {name = "Maciej Budyś", email = "kha-white@mail.com"},
]
description = "OCR for Japanese manga"
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]
dependencies = [
    "albumentations>=1.4.18",
    "budoux",
    "fire",
    "fonttools>=4.57.0",
    "fugashi",
    "html2image>=2.0.7",
    "jaconv",
    "loguru",
    "numpy",
    "opencv-python>=4.12.0.88",
    "pandas>=2.0.3",
    "Pillow>=10.0.0",
    "pyperclip",
    "torch>=1.0",
    "transformers>=4.25.0",
    "unidic_lite",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/kha-white/manga-ocr"

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["manga_ocr"]

[tool.setuptools.dynamic]
version = {attr = "manga_ocr._version.__version__"}

[tool.ruff]
line-length = 120
indent-width = 4

[project.scripts]
manga_ocr = "manga_ocr.__main__:main"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [  
{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [  
{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
